--- a/assignment_1/Makefile
+++ b/assignment_1/Makefile
@@ -1,7 +1,7 @@
-CFLAGS=-Wall -g -O0
-
 all:
 	make exercise1
+	make exercise2
+	make exercise3
 
 clean:
-	rm exercise1
+	rm exercise1 exercise2 exercise3
