--- a/assignment_2/Makefile
+++ b/assignment_2/Makefile
@@ -3,7 +3,8 @@ CFLAGS=-Wall -Ofast -fopenmp
 all:
 	make exercise1
 	make exercise2
+	make exercise2_startingpoint
 	make exercise3
 
 clean:
-	rm exercise1 exercise2 exercise3
+	rm exercise1 exercise2 exercise2_startingpoint exercise3 
