ex2 fast working with BLOCK_SIZE=N...

--- a/assignment_2/Makefile
+++ b/assignment_2/Makefile
@@ -4,6 +4,7 @@ all:
 	make exercise1
 	make exercise2
 	make exercise2_startingpoint
+	make exercise2_fast
 
 clean:
-	rm exercise1 exercise2 exercise2_startingpoint 
+	rm exercise1 exercise2 exercise2_startingpoint exercise2_fast
